cabal-version:      3.4
name:               obj-parser
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             Aleksei Vagarenko
maintainer:         vagarenko@gmail.com
category:           Graphics
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    -- Import common warning flags.
    import:           warnings

    -- Modules exported by the library.
    exposed-modules:
          ObjParser.Obj
        , ObjParser.Mtl
        , ObjParser.Utils

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    -- Other library packages from which modules are imported.
    build-depends:    
          base              ^>= 4.17.0.0
        , attoparsec        ^>= 0.14
        , dlist             ^>= 1.0
        , text              ^>= 2.0
        , vector            ^>= 0.13
        , linear            ^>= 1.22
        , lens              ^>= 5.2
        , containers        ^>= 0.6
    -- Directories containing source files.
    hs-source-dirs:   src

    -- Base language which the package is written in.
    default-language: GHC2021
